fix(datagrid): fix scrollbar issue in Edge/IE
• value of 'scroll' meant horizontal scrollbar was always visible in IE/Edge
• changed to 'auto'

Tested in:
✔︎ Chrome
✔︎ Firefox
✔︎ Safari

--- a/src/clr-angular/data/datagrid/_datagrid.clarity.scss
+++ b/src/clr-angular/data/datagrid/_datagrid.clarity.scss
@@ -864,7 +864,7 @@
   .datagrid-detail-pane-content {
     display: flex;
     flex-direction: column;
-    overflow: scroll;
+    overflow: auto;
     height: 100%;
   }
 
